Bug 1161722 - If we're shutting down, don't warn about untracked unlocked surfaces. r=dholbert